2.1.8
- Tweak a few aura priorities.
- Add new "DR Glow Off" setting.
- Remove Upheaval from Knock DR's.
- Focus Indicator no longer enabled by default for Blizz Compact layout.

2.1.7
- One new layout: Blizz Compact
- Four new features in layout settings in new Widgets section:
1. Target Indicator: Show icon on your current target
2. Focus Indicator: Show icon on your current focus
3. Party Target Indicator: Show class colored player icons on arena frames indicating who your party members are targeting.
4. Combat Indicator: Show food icon on out of combat arena frames.
- New Hide Castbar Icon setting.
- Dark mode is no longer enabled by default if BetterBlizzFrames' DarkMode or FrameColor is detected.
- DR Text setting moved from global to layout settings next to other similar settings.
- Fix issues with dispel tracker being updated multiple times per one dispell.
- MoP: Potential fix for Human Racial/Trinket issue on MoP.
- Misc minor tweaks in gui and layouts.

2.1.6
- Fix GUI not updating position settings immediately after dragging things around.
- Fix DR Categories not respecting per spec & per class settings due to falling back to global settings like how Static Icons work, oops.

2.1.5
- Priest's Purify now displays a stack number on it if double dispel. At 0 stacks it gets desaturated. At 1 or more stacks it stays colored.
- Add options to disable desaturation on Trinket & Dispel CD (Global -> Arena Frames -> Misc).
- Re-enable manabar text and add settings to show/hide it and position settings etc. Disabled by default.
- Tweak layouts a little: Removed font outline on spec name text for Retail layout. Add font outline to the old Arena & Xaryu layout's health & mana text (as it used to be, this got unintentionally removed with new font settings).
- Fix racials not updating properly between shuffle rounds.

2.1.4
- New "Simple Castbar" setting for Modern Castbars. Removes text background and puts text inside of the castbar.